Add Jenkins Quick Start
Change-Id: I848ab61f2924686cd0f71e3f3e3e9f4cec5ade00
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>